fix: unique messageID for forward
